# wb-uart

./: .gitignore  CMakeLists.txt  README.md
bench/cpp/inc/: SynchronousTB.hpp  SynchronousTestBench.hpp  UartTestBench.hpp  UartTestBench.tpp  UartTestbench.hpp  VirtualUart.hpp  VirtualUart.tpp  testbench.hpp
bench/cpp/inc/tcp/: TCPConnection.hpp  TCPServer.hpp  TCPUart.hpp  TCPUart.tpp  UDPServer.hpp  udp_server.hpp
bench/cpp/src/: TCPSocket.cpp  VirtualUart.cpp  echoServer.cpp  testCharDetector.cpp  testEcho.cpp  testEdgeDetector.cpp  testFifo.cpp  testLinefeed.cpp  testSocket.cpp  testTCPTestBench.cpp  testUART.cpp  testUARTRx.cpp  testUARTTx.cpp  testVirtualUart.cpp  verilatorCatchMain.cpp
bench/cpp/src/examples/: helloUart.cpp  uartEcho.cpp
bench/cpp/src/tcp/: TCPConnection.cpp  TCPServer.cpp  UDPServer.cpp  udp_server.cpp
bench/verilog/: hello_uart.v  uart_echo.v
cmake/: examples.cmake  tests.cmake  verilator_build.cmake
cmake/unittests/: test_FIFO.cmake  test_UARTTx.cmake
rtl/: char_detector.v  edge_detector.v  fifo.v  hello_uart.v  linefeed_detector.v  uart_rx.v  uart_tx.v  wb_uart.v
verilator/: verilator_edge_detector.sh  verilator_fifo.sh  verilator_hello_uart.sh  verilator_linefeed.sh  verilator_uart_rx.sh  verilator_uart_tx.sh  verilator_wb_uart.sh
